[package]
name = "aoc_2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_util = { workspace = true }
petgraph = "0.6.4"
regex = { version = "1.9.5", default-features = false, features = [
    "std",
    "perf",
] }
